--- a/Gameception/Assinante/Templates/Assinante/HistoricoPedido.html
+++ b/Gameception/Assinante/Templates/Assinante/HistoricoPedido.html
@@ -1,6 +1,85 @@
 {% extends "MainPage.html" %}
 
 {% block content %}
+
+<h1>HISTÓRICO</h1>
+
+
+<h2>Seu pedido de {{pedido.data}}</h2>
+
+<h2>Total cobrado: R${{preco}}</h2>
+
+{% if digital %}
+
+{% for chave in chaves %}
+  <div class="row" style="float: left; padding: 20px">
+    <div>
+      <div class="thumbnail">
+        <img src="http://cdn.akamai.steamstatic.com/steam/apps/{{chave.jogo.img1}}/header.jpg?t={{chave.jogo.img2}}" style="width: 460px; height: 215px">
+        <div class="caption">
+          <h3>{{ chave.jogo.nome }}</h3>
+          <p>Gêneros: </p>
+          {% for genero in chave.jogo.listaGeneros.all %}
+          <p>{{ genero.nome }}</p>
+          {% endfor %}
+          Chave de Download: {{chave.chave}}
+        </div>
+      </div>
+    </div>
+  </div>
+{% endfor %}
+
+{% else %}
+
+<h3>Código de rastreamento: {{pedido.codigoRastreamento}}</h3>
+
+{% for jogo in pedido.jogosPedidos.all %}
+  <div class="row" style="float: left; padding: 20px">
+    <div>
+      <div class="thumbnail">
+        <img src="http://cdn.akamai.steamstatic.com/steam/apps/{{jogo.img1}}/header.jpg?t={{jogo.img2}}" style="width: 460px; height: 215px">
+        <div class="caption">
+          <h3>{{ jogo.nome }}</h3>
+          <p>Gêneros: </p>
+          {% for genero in jogo.listaGeneros.all %}
+          <p>{{ genero.nome }}</p>
+          {% endfor %}
+        </div>
+      </div>
+    </div>
+  </div>
+{% endfor %}
+
+
+
+{% endif %}
+
+{% endblock %}
+
+
+
+{% block side %}
+
+  <h2>Meu jogos</h2>
+
+    <a href="#"><button class="btn-primary">Ver todos os meus jogos</button></a>
+
+  <h2>Meus pedidos por data</h2>
+
+  {% for p in listaPedidos %}
+
+    <a href="http://127.0.0.1:8000/Assinante/Historico/{{p.numero}}/"><button class="btn-primary">{{p.data}}</button></a>
+
+  {% endfor %}
+
+{% endblock %}
+
+
+
+
+
+
+{% block contentz %}
 <body>
       <h1>HISTÓRICO</h1>
       mostrar aqui o pedido {{num_pedido}} do assinante {{user.username}}<br>
