--- a/Gameception/Assinante/Templates/Assinante/Cadastro.html
+++ b/Gameception/Assinante/Templates/Assinante/Cadastro.html
@@ -12,16 +12,17 @@
       <form role="form"  method="post" action="/Assinante/Cadastro/">
                       {% csrf_token %}
 
-      <h2 class="form-signin-heading">Sign Up Here</h2>
+      <h2 class="form-signin-heading">Cadastre-se Aqui</h2>
 
-      <div class="form-group" >
-       <p class="required"> <label for="id_username">Username:</label>
-           <input class="form-control"  id="id_username" maxlength="30" name="username" type="text"  placeholder="Enter username"/></p>
-      </div>
+
        <div class="form-group">
           <p class="required"><label for="id_email">E-mail:</label>
               <input class="form-control" id="id_email" name="email" type="email" placeholder="Enter email" /></p>
        </div>
+      <div class="form-group" >
+       <p class="required"> <label for="id_username">Username:</label>
+           <input class="form-control"  id="id_username" maxlength="30" name="username" type="text"  placeholder="Enter username"/></p>
+      </div>
       <div class="form-group">
           <p class="required"><label for="id_password">Password:</label>
               <input class="form-control" id="id_password" name="password" type="password" placeholder="Enter password" /></p>
