--- a/Gameception/Assinante/Templates/Assinante/EditarCadastro.html
+++ b/Gameception/Assinante/Templates/Assinante/EditarCadastro.html
@@ -5,23 +5,24 @@
 
   {% if registrado %}
 
-      Obrigado por registrar-se! <a href="{% url 'Login' %}"> Faça seu login </a> e visite sua conta!
+      Suas informações foram alteradas com sucesso!
 
   {% else %}
 
-      <form role="form"  method="post" action="/Assinante/Cadastro/">
+      <form role="form"  method="post" action="/Assinante/EditarCadastro/">
                       {% csrf_token %}
 
       <h2 class="form-signin-heading">Edite Seu Cadastro</h2>
 
-      <div class="form-group" >
-       <p class="required"> <label for="id_username">Username:</label>
-           <input class="form-control"  id="id_username" maxlength="30" name="username" type="text"  placeholder="Enter username"/></p>
-      </div>
+
        <div class="form-group">
           <p class="required"><label for="id_email">E-mail:</label>
               <input class="form-control" id="id_email" name="email" type="email" placeholder="Enter email" /></p>
        </div>
+      <div class="form-group" >
+       <p class="required"> <label for="id_username">Username:</label>
+           <input class="form-control"  id="id_username" maxlength="30" name="username" type="text"  placeholder="Enter username"/></p>
+      </div>
       <div class="form-group">
           <p class="required"><label for="id_password">Password:</label>
               <input class="form-control" id="id_password" name="password" type="password" placeholder="Enter password" /></p>
