--- a/Gameception/InfoGeral/Templates/Infos/Home.html
+++ b/Gameception/InfoGeral/Templates/Infos/Home.html
@@ -9,11 +9,15 @@
 </head>
 <body>
     <div class="jumbotron">
-        <h1>Bem vindo a GAMECEPTION!</h1><br>
-        <p>Aqui você poderá...lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut est felis, feugiat at sapien vitae, molestie molestie ante. In tortor ante, rutrum eget lacus a, mollis posuere massa. Nam nibh sapien, varius vel ultricies sed, pharetra facilisis mauris. Duis tincidunt euismod sapien at laoreet. Donec semper pretium viverra. In ultricies, justo rutrum egestas volutpat, leo est tincidunt arcu, eu euismod tellus enim in augue. Vivamus hendrerit dolor eros, nec dictum ante vehicula ut. Sed vitae sapien fringilla, sodales magna non, pellentesque eros. Suspendisse ac purus posuere, bibendum libero non, euismod justo. Etiam tempor eros ac tincidunt consectetur.
-        </p><br>
-        <p>   Vivamus in risus quis lorem sodales tempus. Etiam dictum congue erat, ac pharetra felis consequat ut. Integer sodales lectus et nulla imperdiet, sed accumsan est porta. Duis non venenatis ante. Curabitur rhoncus magna odio, et volutpat neque ultrices a. Praesent sit amet lectus dui. Suspendisse nec felis ornare, pharetra lectus a, lobortis leo.</p>
-        </p><br>
+        <h1>Bem vindo a GAMECEPTION!</h1>
+        <p>
+            A sua plataforma online de assinatura personalizada de jogos. Onde você poderá personalizar seu perfil e 
+            todo mês será surpreendido com produtos escolhidos por nós para melhor se adequarem a suas preferencias.<br>
+            Assine agora para ir mais fundo no mundo dos games!
+        </p>
+        <!--img src="http://dazedimg.dazedgroup.netdna-cdn.com/786/azure/dazed-prod/1120/2/1122563.jpg" alt="inception spinning top" style="width:650px;height:350px;"-->
+        <img src="https://i.kinja-img.com/gawker-media/image/upload/s--a3YtQ3Zd--/c_scale,fl_progressive,q_80,w_800/196opfgjbhn16jpg.jpg" alt="inception spinning top" style="width:650px;height:350px;">
+        <br> <br>
         <a class="btn btn-primary btn-lg" href="{% url 'Sobre' %}" role="button">Saiba Mais</a></p>
 </div>
 </body>
