--- a/Gameception/Assinante/Templates/Assinante/Assinatura.html
+++ b/Gameception/Assinante/Templates/Assinante/Assinatura.html
@@ -13,7 +13,7 @@
             <h2 class="form-signin-heading">Assinatura</h2>
             {{ form.non_field_errors }}
             <strong>Defina as opções de sua assinatura:</strong><br/><br/>
-
+            <div class="col-xs-4">
             <strong>Gêneros de preferência:</strong><br/>
             {{form.generosPessoaisForm.errors}}
             {{form.generosPessoaisForm}}
@@ -54,6 +54,7 @@
             <br/>
 
             <button type="submit" class="btn btn-default">Submit</button>
+            </div>
         </form>
 
     {% endif %}
