--- a/Gameception/Assinante/Templates/Assinante/Cadastro.html
+++ b/Gameception/Assinante/Templates/Assinante/Cadastro.html
@@ -14,7 +14,7 @@
 
       <h2 class="form-signin-heading">Cadastre-se Aqui</h2>
 
-
+      <div class="col-xs-3">
        <div class="form-group">
           <p class="required"><label for="id_email">E-mail:</label>
               <input class="form-control" id="id_email" name="email" type="email" placeholder="Enter email" /></p>
@@ -37,6 +37,7 @@
       </div>
 
       <button type="submit" class="btn btn-default">Submit</button>
+      </div>
 
       </form>
 
