--- a/Gameception/Assinante/Templates/Assinante/Cadastro.html
+++ b/Gameception/Assinante/Templates/Assinante/Cadastro.html
@@ -15,26 +15,35 @@
       <h2 class="form-signin-heading">Cadastre-se Aqui</h2>
 
       <div class="col-xs-3">
-       <div class="form-group">
-          <p class="required"><label for="id_email">E-mail:</label>
-              <input class="form-control" id="id_email" name="email" type="email" placeholder="Enter email" /></p>
-       </div>
-      <div class="form-group" >
-       <p class="required"> <label for="id_username">Username:</label>
-           <input class="form-control"  id="id_username" maxlength="30" name="username" type="text"  placeholder="Enter username"/></p>
-      </div>
-      <div class="form-group">
-          <p class="required"><label for="id_password">Password:</label>
-              <input class="form-control" id="id_password" name="password" type="password" placeholder="Enter password" /></p>
-      </div>
-      <div class="form-group">
-          <p class="required"><label for="id_CPF">CPF:</label>
-       <input class="form-control" id="id_CPF" maxlength="11" name="CPF" type="text" placeholder="CPF" /></p>
-      </div>
-      <div class="form-group">
-          <p class="required"><label for="id_nome">Nome:</label>
-       <input class="form-control" id="id_nome" maxlength="200" name="nome" type="text" placeholder="Nome" /></p>
-      </div>
+
+       <strong>E-mail: </strong><br/>
+       {{ user_form.email.errors }}
+       {{ user_form.email }}
+       <br/>
+
+
+      <strong>username: </strong><br/>
+      {{ user_form.username.errors }}
+      {{ user_form.username }}
+      <br/>
+
+
+      <strong>password: </strong><br/>
+      {{ user_form.password.errors }}
+      {{ user_form.password }}
+      <br/>
+
+
+      <strong>CPF: </strong><br/>
+      {{ assinante_form.CPF.errors }}
+      {{ assinante_form.CPF }}
+      <br/>
+
+
+      <strong>Nome: </strong><br/>
+      {{ assinante_form.nome.errors }}
+      {{ assinante_form.nome }}
+      <br/>
 
       <button type="submit" class="btn btn-default">Submit</button>
       </div>
