--- a/Gameception/InfoGeral/Templates/Infos/Contatos.html
+++ b/Gameception/InfoGeral/Templates/Infos/Contatos.html
@@ -9,20 +9,22 @@
 </head>
 <body>
 <div style="position:relative">
-    <table style="padding:50px; top: 50%; width: 100%; text-align: center; border-spacing: 50px">
+    <table style="padding:50px; right:30px ;top: 50%; width: 50%; text-align: center; border-spacing: 50px">
 
         <tr>
             <td>
                 <a href="https://www.facebook.com/Gameception" target="_blank">
-                    <button type="button" class="btn btn-info btn-block">Facebook</button>
-                </a>
+                    <button type="button" class="btn btn-info btn-lg" style="margin:10px;width:150px;text-align: left">
+                        <img src="https://cdn1.iconfinder.com/data/icons/logotypes/32/square-facebook-128.png" style="height:30px">  Facebook</button>
+                </>
             </td>
 
             <br><br>
 
             <td>
                 <a href="https://twitter.com/GameceptionTwit" target="_blank">
-                    <button type="button" class="btn btn-info btn-block">Twitter</button>
+                    <button type="button" class="btn btn-info btn-lg" style="margin:10px;width:150px;text-align: left">
+                        <img src="http://icons.iconarchive.com/icons/limav/flat-gradient-social/512/Twitter-icon.png" style="height:30px">  Twitter</button>
                 </a>
             </td>
         </tr>
@@ -32,7 +34,8 @@
         <tr>
             <td>
                 <a href="http://gameceptionblog.tumblr.com/" target="_blank">
-                    <button type="button" class="btn btn-info btn-block">Tumblr</button>
+                    <button type="button" class="btn btn-info btn-lg" style="margin:10px;width:150px;text-align: left">
+                        <img src="https://cdn1.iconfinder.com/data/icons/logotypes/32/square-tumblr-512.png" style="height:30px">  Tumblr</button>
                 </a>
             </td>
 
@@ -40,7 +43,8 @@
 
             <td>
                 <a href="https://www.instagram.com/gameceptioninsta/" target="_blank">
-                    <button type="button" class="btn btn-info btn-block">Instagram</button>
+                    <button type="button" class="btn btn-info btn-lg" style="margin:10px;width:150px;text-align: left">
+                        <img src="http://3835642c2693476aa717-d4b78efce91b9730bcca725cf9bb0b37.r51.cf1.rackcdn.com/Instagram_App_Large_May2016_200.png" style="height:30px">  Instagram</button>
                 </a>
             </td>
         </tr>
@@ -50,7 +54,8 @@
         <tr>
             <td>
                 <a href="https://plus.google.com/113322590669806837209?hl=en" target="_blank">
-                    <button type="button" class="btn btn-info btn-block">Google+</button>
+                    <button type="button" class="btn btn-info btn-lg" style="margin:10px;width:150px;text-align: left">
+                        <img src="http://leapfroggr.s3.amazonaws.com/googleplus.png" style="height:30px">  Google+</button>
                 </a>
             </td>
 
@@ -58,7 +63,8 @@
 
             <td>
                 <a href="https://www.youtube.com/channel/UCkSJZq4xNIg1hEdtDj-35sw?&ab_channel=GameceptionCompany" target="_blank">
-                    <button type="button" class="btn btn-info btn-block">Youtube</button>
+                    <button type="button" class="btn btn-info btn-lg" style="margin:10px;width:150px;text-align: left">
+                        <img src="https://www.youtube.com/yt/brand/media/image/YouTube-icon-full_color.png" style="height:30px">  Youtube</button>
                 </a>
             </td>
         </tr>
