--- a/Gameception/Assinante/Templates/Assinante/HistoricoPedido.html
+++ b/Gameception/Assinante/Templates/Assinante/HistoricoPedido.html
@@ -62,7 +62,7 @@
 
   <h2>Meu jogos</h2>
 
-    <a href="#"><button class="btn-primary">Ver todos os meus jogos</button></a>
+    <a href="{% url 'Historico' %}"><button class="btn-primary">Ver todos os meus jogos</button></a>
 
   <h2>Meus pedidos por data</h2>
 
