--- a/Gameception/Assinante/Templates/Assinante/HistoricoPedido.html
+++ b/Gameception/Assinante/Templates/Assinante/HistoricoPedido.html
@@ -68,7 +68,7 @@
 
   {% for p in listaPedidos %}
 
-    <a href="http://127.0.0.1:8000/Assinante/Historico/{{p.numero}}/"><button class="btn-primary">{{p.data}}</button></a>
+    <a href="/Assinante/Historico/{{p.numero}}/"><button class="btn-primary">{{p.data}}</button></a>
 
   {% endfor %}
 
