--- a/Gameception/Assinante/Templates/MainPage.html
+++ b/Gameception/Assinante/Templates/MainPage.html
@@ -63,7 +63,10 @@
              Bem vindo {{user.username}}! <br>
              <a href="{% url 'MinhaConta' %}">Minha Conta</a> <br>
              {% if user.is_staff %}
-              <br><a href="{% url 'GerenciarEntregas' %}"><button class="btn-primary">Gerenciar entregas</button></a>
+             <br><a href="{% url 'GerenciarEntregas' %}">
+                <button class="btn btn-primary btn-md" style="margin:10px;width:200px;text-align: center">Gerenciar entregas</button></a>
+             <br><a href="../../admin">
+                <button class="btn btn-primary btn-md" style="margin:10px;width:200px;text-align: center">Gerenciar bancos de dados</button></a>
              {%endif%}
            </div>
           {% endif %}
