--- a/Gameception/Assinante/Templates/Assinante/Assinante.html
+++ b/Gameception/Assinante/Templates/Assinante/Assinante.html
@@ -30,7 +30,8 @@
                 </div>
               </div>
               {% endfor %}
-              <br><a href="/Assinante/Historico/{{pedido_recente.numero}}/">Ver minhas outras entregas</a>
+              <br><a href="/Assinante/Historico/{{pedido_recente.numero}}/">
+            <button class="btn btn-md btn-primary" style="margin:10px">Ver minhas outras entregas</button></a>
 
               {% else %}
               fis <br>
