--- a/Gameception/Assinante/Templates/Assinante/Historico.html
+++ b/Gameception/Assinante/Templates/Assinante/Historico.html
@@ -4,13 +4,18 @@
 
   <h2>Meu jogos</h2>
 
-    <a href="{% url 'Historico' %}"><button class="btn-primary">Ver todos os meus jogos</button></a>
+
+    <form action="{% url 'Historico' %}">
+      <input type="submit" value="Ver todos os meus jogos" class="btn btn-primary btn-sm" style="margin:7px;width:150px;text-align: center">
+    </form>
 
   <h2>Meus pedidos por data</h2>
 
   {% for p in listaPedidos %}
 
-    <a href="/Assinante/Historico/{{p.numero}}/"><button class="btn-primary">{{p.data}}</button></a>
+    <form action="/Assinante/Historico/{{p.numero}}/">
+      <input type="submit" value="{{p.data}}" class="btn btn-primary btn-sm" style="margin:7px;width:100px;text-align: center">
+    </form>
 
   {% endfor %}
 
@@ -23,24 +28,24 @@
 {% for p in listaPedidos %}
 
   {% for j in p.jogosPedidos.all %}
-    <div class="row" style="float: left; padding: 20px">
-      <div>
-        <div class="thumbnail">
-          <img src="http://cdn.akamai.steamstatic.com/steam/apps/{{j.img1}}/header.jpg?t={{j.img2}}" style="width: 460px; height: 215px">
-          <div class="caption">
-            <h3>{{ j.nome }}</h3>
-            <p>Gêneros: </p>
-            {% for genero in j.listaGeneros.all %}
-            <p>{{ genero.nome }}</p>
-            {% endfor %}
-            Entregue em: {{p.data}}
-          </div>
-        </div>
-      </div>
+
+    <div class="row" style="float: left; padding: 20px; <!--outline-style:solid; outline-color:black;--> margin:10px">
+     <div>
+       <div class="thumbnail">
+         <img src="http://cdn.akamai.steamstatic.com/steam/apps/{{j.img1}}/header.jpg?t={{j.img2}}" style="width: 460px; height: 215px">
+         <div class="caption">
+           <h3>{{ j.nome }}</h3>
+           <p>Gêneros: </p>
+           {% for genero in j.listaGeneros.all %}
+           <p style="display: inline">{{ genero.nome }};</p>
+           {% endfor %}
+           <br>Entregue em: <a href="/Assinante/Historico/{{p.numero}}/"><button class="btn-primary">{{p.data}}</button></a><br>
+         </div>
+       </div>
+     </div>
     </div>
   {% endfor %}
 
 {% endfor %}
 
 {% endblock %}
-
