--- a/Gameception/Assinante/Templates/Assinante/EditarCadastro.html
+++ b/Gameception/Assinante/Templates/Assinante/EditarCadastro.html
@@ -12,33 +12,26 @@
       <form role="form"  method="post" action="/Assinante/EditarCadastro/">
                       {% csrf_token %}
 
-      <h2 class="form-signin-heading">Edite Seu Cadastro</h2>
+      <h2 class="form-signin-heading">Edite Seu username ou email</h2>
+      <div class="col-xs-3">
+       <strong>Username:</strong><br/>
+       {{ form.username.errors }}
+       {{ form.username }}
+       <br/>
 
-
-       <div class="form-group">
-          <p class="required"><label for="id_email">E-mail:</label>
-              <input class="form-control" id="id_email" name="email" type="email" placeholder="Enter email" /></p>
-       </div>
-      <div class="form-group" >
-       <p class="required"> <label for="id_username">Username:</label>
-           <input class="form-control"  id="id_username" maxlength="30" name="username" type="text"  placeholder="Enter username"/></p>
-      </div>
-      <div class="form-group">
-          <p class="required"><label for="id_password">Password:</label>
-              <input class="form-control" id="id_password" name="password" type="password" placeholder="Enter password" /></p>
-      </div>
-      <div class="form-group">
-          <p class="required"><label for="id_CPF">CPF:</label>
-       <input class="form-control" id="id_CPF" maxlength="11" name="CPF" type="text" placeholder="CPF" /></p>
-      </div>
-      <div class="form-group">
-          <p class="required"><label for="id_nome">Nome:</label>
-       <input class="form-control" id="id_nome" maxlength="200" name="nome" type="text" placeholder="Nome" /></p>
-      </div>
+       <strong>email:</strong><br/>
+       {{ form.email.errors }}
+       {{ form.email }}
+       <br/>
 
       <button type="submit" class="btn btn-default">Submit</button>
-
+      </div>
       </form>
 
     {% endif %}
+
+    <div class="">
+    <a href="{% url 'EditarSenha' %}"><button type="input" class="btn btn-default">alterar senha</button></a>
+    </div>
+
 {% endblock %}
