--- a/Gameception/Assinante/Templates/Assinante/Assinante.html
+++ b/Gameception/Assinante/Templates/Assinante/Assinante.html
@@ -147,10 +147,10 @@
             <h3 class="panel-title">Outras opções</h3>
           </div>
           <a href="{% url 'EditarCadastro' %}"><button class="btn btn-md btn-primary" style="margin:10px">Editar informações de cadastro</button></a> <br>
-
-            <a href="" data-toggle="modal" data-target="#myModal">
-                <button class="btn btn-md btn-primary" style="margin:10px">Contatar um administrador</button></a>
-           <br>
+          <a href="{% url 'EditarSenha' %}"><button class="btn btn-md btn-primary" style="margin:10px">Alterar Senha</button></a> <br>
+          <a href="" data-toggle="modal" data-target="#myModal">
+             <button class="btn btn-md btn-primary" style="margin:10px">Contatar um administrador</button></a>
+          <br>
         </div>
       </div>
 
