--- a/Gameception/Assinante/Templates/Assinante/Cadastro.html
+++ b/Gameception/Assinante/Templates/Assinante/Cadastro.html
@@ -45,6 +45,13 @@
       {{ assinante_form.nome }}
       <br/>
 
+
+      <strong>Telefone: </strong><br/>
+      {{ assinante_form.telefone.errors }}
+      {{ assinante_form.telefone }}
+      <br/>
+
+
       <button type="submit" class="btn btn-default">Submit</button>
       </div>
 
