--- a/Gameception/Assinante/Templates/MainPage.html
+++ b/Gameception/Assinante/Templates/MainPage.html
@@ -60,8 +60,9 @@
         <div class="col-sm-3 col-md-2 sidebar">
           {% if user.is_authenticated %}
            <div class="">
-             Bem vindo {{user.username}}! <br>
-             <a href="{% url 'MinhaConta' %}">Minha Conta</a> <br>
+             <h4>Bem vindo {{user.username}}! </h4>
+             <a href="{% url 'MinhaConta' %}">
+               <button class="btn btn-primary btn-md" style="margin:10px;width:200px;text-align: center">Minha Conta</button></a><br>
              {% if user.is_staff %}
              <br><a href="{% url 'GerenciarEntregas' %}">
                 <button class="btn btn-primary btn-md" style="margin:10px;width:200px;text-align: center">Gerenciar entregas</button></a>
