--- a/Gameception/Assinante/Templates/Assinante/Assinante.html
+++ b/Gameception/Assinante/Templates/Assinante/Assinante.html
@@ -1,5 +1,7 @@
 {% extends "MainPage.html" %}
 
+{% block title %}Minha Conta{% endblock %}
+
     {% load staticfiles %}
 
     {% block content %}
