--- a/Gameception/Acervo/Templates/Acervo/Acervo.html
+++ b/Gameception/Acervo/Templates/Acervo/Acervo.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 
-  {% for jogo in jogos %}
+    {% for jogo in jogos %}
     <div class="row" style="float: left; padding: 20px; <!--outline-style:solid; outline-color:black;--> margin:10px" >
         <div class="thumbnail">
             <img src="http://cdn.akamai.steamstatic.com/steam/apps/{{jogo.img1}}/header.jpg?t={{jogo.img2}}" style="width: 460px; height: 215px">
@@ -23,7 +23,21 @@
                 </div>
         </div>
     </div>
-  {% endfor %}
+    {% endfor %}
+
+    <nav style="text-align: center;">
+        <ul class="pagination">
+            <li><a href="{% url 'Acervo' %}/{{genero}}/{{antpagina}}/" aria-label="Previous" style="width: 39px; height: 35px"><span aria-hidden="true">&laquo;</span></a></li>
+            {% for i in listapaginas %}
+                {% if i == pagina %}
+                    <li class="active"><a href="{% url 'Acervo' %}/{{genero}}/{{i}}/" style="width: 40px; height: 35px">{{i}}</a></li>
+                {% else %}
+                    <li><a href="{% url 'Acervo' %}/{{genero}}/{{i}}/" style="width: 40px; height: 35px">{{i}}</a></li>
+                {% endif %}
+            {% endfor %}
+            <li><a href="{% url 'Acervo' %}/{{genero}}/{{proxpagina}}/" aria-label="Next" style="width: 39px; height: 35px"><span aria-hidden="true">&raquo;</span></a></li>
+        </ul>
+    </nav>
 
 {% endblock %}
 
