--- a/Gameception/Assinante/Templates/Assinante/Historico.html
+++ b/Gameception/Assinante/Templates/Assinante/Historico.html
@@ -33,13 +33,17 @@
      <div>
        <div class="thumbnail">
          <img src="http://cdn.akamai.steamstatic.com/steam/apps/{{j.img1}}/header.jpg?t={{j.img2}}" style="width: 460px; height: 215px">
-         <div class="caption">
+         <div class="caption" style="max-width:460px; height: 400px">
            <h3>{{ j.nome }}</h3>
            <p>Gêneros: </p>
            {% for genero in j.listaGeneros.all %}
            <p style="display: inline">{{ genero.nome }};</p>
            {% endfor %}
-           <br>Entregue em: <a href="/Assinante/Historico/{{p.numero}}/"><button class="btn-primary">{{p.data}}</button></a><br>
+           <br><br>
+           <p>Descrição:</p>
+           <p style="text-indent:30px">{{ j.descricao }}</p>
+           <br>
+           Entregue em: <a href="/Assinante/Historico/{{p.numero}}/"><button class="btn-primary">{{p.data}}</button></a><br>
          </div>
        </div>
      </div>
