--- a/Gameception/Assinante/Templates/Assinante/HistoricoPedido.html
+++ b/Gameception/Assinante/Templates/Assinante/HistoricoPedido.html
@@ -14,19 +14,21 @@
 {% for chave in chaves %}
 
   <div class="row" style="float: left; padding: 20px; <!--outline-style:solid; outline-color:black;--> margin:10px">
-   <div>
      <div class="thumbnail">
-       <img src="http://cdn.akamai.steamstatic.com/steam/apps/{{chave.jogo.img1}}/header.jpg?t={{chave.jogo.img2}}" style="width: 460px; height: 215px">
-       <div class="caption">
-         <h3>{{ chave.jogo.nome }}</h3>
-         <p>Gêneros: </p>
-         {% for genero in chave.jogo.listaGeneros.all %}
-         <p style="display: inline">{{ genero.nome }};</p>
-         {% endfor %}
-         <br>Chave de Download: {{chave.chave}}
-       </div>
+        <img src="http://cdn.akamai.steamstatic.com/steam/apps/{{chave.jogo.img1}}/header.jpg?t={{chave.jogo.img2}}" style="width: 460px; height: 215px">
+        <div class="caption" style="max-width:460px; height: 380px">
+          <h3>{{ chave.jogo.nome }}</h3>
+          <p>Gêneros: </p>
+          {% for genero in chave.jogo.listaGeneros.all %}
+          <p style="display: inline">{{ genero.nome }};</p>
+          {% endfor %}
+          <br><br>
+          <p>Descrição:</p>
+          <p style="text-indent:30px">{{ chave.jogo.descricao }}</p>
+          <br>
+          Chave de Download: {{chave.chave}}
+        </div>
      </div>
-   </div>
   </div>
 {% endfor %}
 
@@ -40,14 +42,15 @@
    <div>
      <div class="thumbnail">
        <img src="http://cdn.akamai.steamstatic.com/steam/apps/{{jogo.img1}}/header.jpg?t={{jogo.img2}}" style="width: 460px; height: 215px">
-       <div class="caption">
+       <div class="caption" style="max-width:460px; height: 300px">
          <h3>{{ jogo.nome }}</h3>
          <p>Gêneros: </p>
          {% for genero in jogo.listaGeneros.all %}
          <p style="display: inline">{{ genero.nome }};</p>
          {% endfor %}
-         <br><p>Descrição:</p>
-         <p style="text-indent:30px">x y z</p>
+         <br><br>
+         <p>Descrição:</p>
+         <p style="text-indent:30px">{{ jogo.descricao }}</p>
        </div>
      </div>
    </div>
